fix layout break

--- a/src/css/resume.css
+++ b/src/css/resume.css
@@ -178,6 +178,9 @@ section.resume-section .resume-item .resume-date, section.resume-section .resume
 }
 
 @media (min-width: 992px) {
+  section {
+    margin-left: 170px !important;
+  }
   section.resume-section {
     padding-top: 3rem !important;
     padding-bottom: 3rem !important;
